--- a/lecturacomic.html
+++ b/lecturacomic.html
@@ -2,95 +2,169 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spacerose-comic</title>
-    <link rel="shortcut icon" href="./Img/favicon.ico">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="./styles/recuperacion.css" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SpaceRose-Home</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <link rel="shortcut icon" href="./Img/favicon.ico">
+  <link rel="stylesheet" href="./styles/lectura.css" />
 </head>
 
-<body>
-    <section class="home">
-        <header class="container py-2">
-            <nav class="navbar navbar-dark navbar-expand-lg">
-                <a href="./index.html" class="navbar-brand logo">
-                    <img class="img-fluid logo" src="./Img/logo Spacerose.png" alt="Spacerose" />
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="mainMenu">
-                    <ul class="navbar-nav ml-auto menu">
-                        <li class="nav-item">
-                            <a class="nav-link  mr-5 text-white text-bold" href="./index.html">Home</a>
-                        </li>                        
-                        <li class="nav-item">
-                            <button type="button" class="btn_login btn text-white text-bold" data-toggle="modal"
-                                data-target="#login">
-                                Login
-                            </button>
-                            <!-- Modal -->
-                            <div class="modal fade" id="login" data-backdrop="static" data-keyboard="false">
-                                <div class="modal-dialog modal-dialog-centered">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title"></h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <form>
-                                                <h2 class="text-center pb-3 text-bold">Inicio Sesión</h2>
-                                                <div class="form-group">
-                                                    <label for="email">Correo electrónico</label>
-                                                    <input required type="email" class="form-control">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="password">Contraseña</label>
-                                                    <input required type="password" class="form-control">
-                                                </div>
-                                                <div class="form-group form-check">
-                                                    <input required type="checkbox" class="form-check-input">
-                                                    <label>Mantenerme conectado</label>
-                                                </div>
-                                                <div class="d-flex justify-content-center my-3"><button type="submit"
-                                                        class="btn btn-enviar text-bold">Iniciar sesión</button></div>
-
-                                                <div class="my-3">
-                                                    <span> ¿Ya tienes cuenta?
-                                                        <a href="./registrarse.html">Registrate</a></span> /
-                                                    <span><a href="./recuperacion.html">Recuperar contraseña</a></span>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-    </section>
-
-    <Section class="form_recuperacion mt-5">
-        <div class="container col-6 shadow p-3 mb-5 bg-white rounded">
-            <div class="row flex-column p-5">
-                <h3 class="text-center text-bold mb-5 rounded-pill py-3">Página lectura cómic</h3>
-                <p>... en proceso de diseño...</p>
-            </div>
+<body class="parrafo">
+  <div class="Header">
+    <header class="container py-2">
+      <nav class="navbar navbar-light navbar-expand-lg">
+        <a href="./index.html" class="navbar-brand logo">
+          <img class="img-fluid logo" src="./Img/logo Spacerose.png" alt="Spacerose" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-light navbar-collapse" id="mainMenu">
+          <ul class="navbar-nav ml-auto menu">
+            <li class="nav-item">
+              <a class="nav-link  mr-5 text-white text-bold" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link  mr-5 text-white text-bold" href="./lecturacomic.html">Comic</a>
+            </li>
+          </ul>
         </div>
-    </Section>
+      </nav>
+    </header>
+  </div>
 
-    <!-- script -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+  <section class="flipbook mt-5 d-flex">
+    <button id="prev-btn">
+      <i class="fas fa-arrow-circle-left"></i>
+    </button>
 
+    <!-- The Book -->
+    <div id="book" class="book">
+      <!-- Paper 1 -->
+      <div id="p1" class="paper">
+        <div class="front">
+          <div id="f1" class="front-content">
+            <h1 class="book-title">Little Dog</h1>
+            <img class="cover-img" src="./dog.jpg" alt="dog">
+          </div>
+        </div>
+        <div class="back">
+          <div id="b1" class="back-content">
+            <h2>Some Intro</h2>
+            <div class="content">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Paper 2 -->
+      <div id="p2" class="paper">
+        <div class="front">
+          <div id="f2" class="front-content">
+            <h1>Some Cool Page</h1>
+          </div>
+        </div>
+        <div class="back">
+          <div id="b2" class="back-content">
+            <h1>An Awesome Page</h1>
+          </div>
+        </div>
+      </div>
+      <!-- Paper 3 -->
+      <div id="p3" class="paper">
+        <div class="front">
+          <div id="f3" class="front-content">
+            <h1>An Amazing Page</h1>
+          </div>
+        </div>
+        <div class="back">
+          <div id="b3" class="back-content">
+            <h1>The Good Bye</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <button id="next-btn">
+      <i class="fas fa-arrow-circle-right"></i>
+    </button>
+  </section>
+
+  
+  <!-- btn contact -->
+  <button type="button" class=" border-0 iconContact" data-toggle="modal" data-target="#contact">
+    <i role="button" class="fas fa-headset text-white"></i>
+  </button>
+  <!-- Modal btn contact-->
+  <div class="modal fade " id="contact" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content col-12">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="contactForm" class="row justify-content-center align-items-center">
+            <div class="col-12 btn-contact py-4 mb-3">
+              <div class=" justify-content-center text-center text-white">
+                <h4 class="text-bold">¿Podemos ayudarte en algo?</h4>
+                <p class="subtitle">Con gusto te asesoramos</p>
+              </div>
+            </div>
+            <div class="col-10">
+              <div class="form-group ">
+                <label for="Name" class="parrafo">Nombre y apellidos</label>
+                <input required type="text" class="form-control parrafo" placeholder="">
+              </div>
+              <div class="form-group ">
+                <label for="Email" class="parrafo">Email</label>
+                <input required type="email" class="form-control parrafo" placeholder="">
+              </div>
+              <div class="form-group ">
+                <label for="Coment" class="parrafo">Comentario</label>
+                <textarea type="text" class="form-control parrafo" cols="0" rows="0"
+                  placeholder="Escribe tu comentario..."></textarea>
+              </div>
+              <div class="form-group text-center">
+                <div class="form-check">
+                  <input required class="form-check-input" type="checkbox" id="gridCheck">
+                  <label class="form-check-label parrafo" for="gridCheck">
+                    Acepto la <a href="#" class="privacidad text-decoration-none text-bold ">politica de privacidad</a>
+                  </label>
+                </div>
+                <button type="submit" class="btn btn-contact text-white parrafo mt-3">Enviar</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="container">
+      <footer class="row p-5 justify-content-around align-items-center">
+        <div class>
+          <span class="text-white text-center">&copy;2020<b> SpaceRose</b></span>
+        </div>
+      </footer>
+    </div>
+  </div>
+
+
+  <!-- script -->
+  <script src="./js/comic.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
