--- a/lecturacomic.html
+++ b/lecturacomic.html
@@ -37,11 +37,11 @@
   </div>
 
   <section class="flipbook mt-5 d-flex">
-    <button id="prev-btn">
+    <button id="prevBtn">
       <i class="fas fa-arrow-circle-left"></i>
     </button>
 
-    <!-- The Book -->
+    <!--  -->
     <div id="book" class="book">
       <!-- Paper 1 -->
       <div id="p1" class="paper">
@@ -92,7 +92,7 @@
       </div>
     </div>
 
-    <button id="next-btn">
+    <button id="nextBtn">
       <i class="fas fa-arrow-circle-right"></i>
     </button>
   </section>
