falta responsive de home

--- a/lecturacomic.html
+++ b/lecturacomic.html
@@ -44,49 +44,64 @@
     <!--  -->
     <div id="book" class="book">
       <!-- Paper 1 -->
-      <div id="p1" class="paper">
+      <div id="p1" class="pagina">
         <div class="front">
           <div id="f1" class="front-content">
-            <h1 class="book-title">Little Dog</h1>
-            <img class="cover-img" src="./dog.jpg" alt="dog">
+            <h1 class="book-title">Portadas</h1>
+            <img class="cover-img" src="./img/Recurso 1@3x.png" alt="dog">
           </div>
         </div>
         <div class="back">
-          <div id="b1" class="back-content">
-            <h2>Some Intro</h2>
-            <div class="content">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+          <div id="b1" class="back-content bg-dark d-flex align-items-end">
+            <div class="content text-white ">
+              <article class="team text-left">
+                <h5 class="text-bold text-white mb-3">Colaboradores</h5>
+                <div>
+                  <p class="parrafo">
+                    Estefania Marín
+                  </p>
+                  <p class="parrafo">
+                    Juan Camilo Gutierrez
+                  </p>
+                  <p class="parrafo">
+                    Sharon Osorno
+                  </p>
+                </div>
+
+              </article>
             </div>
           </div>
         </div>
       </div>
       <!-- Paper 2 -->
-      <div id="p2" class="paper">
+      <div id="p2" class="pagina">
         <div class="front">
           <div id="f2" class="front-content">
-            <h1>Some Cool Page</h1>
+            <h1><img src="./img/logo Spacerose.png" class="logo" alt=""></h1>
           </div>
         </div>
         <div class="back">
           <div id="b2" class="back-content">
-            <h1>An Awesome Page</h1>
+            <div class="container d-flex justify-content-center px-5 flex-column">
+              <h1 class="text-bold text-danger text-center">SpaceRose</h1>
+              <p class="parrafo text-center">SpaceRose es una historia ambientada en los años 60, centrada en la llegada
+                del hombre a la
+                luna en el Apollo 11, este relato será narrado por Katherine Johnson, mujer afrodescendiente que realizó
+                los cálculos que hicieron posible dicho suceso.</p>
+            </div>
           </div>
         </div>
       </div>
       <!-- Paper 3 -->
-      <div id="p3" class="paper">
+      <div id="p3" class="pagina">
         <div class="front">
           <div id="f3" class="front-content">
-            <h1>An Amazing Page</h1>
+            <h1></h1>
           </div>
         </div>
         <div class="back">
           <div id="b3" class="back-content">
-            <h1>The Good Bye</h1>
+            <h1>...</h1>
           </div>
         </div>
       </div>
@@ -97,7 +112,7 @@
     </button>
   </section>
 
-  
+
   <!-- btn contact -->
   <button type="button" class=" border-0 iconContact" data-toggle="modal" data-target="#contact">
     <i role="button" class="fas fa-headset text-white"></i>
