--- a/index.html
+++ b/index.html
@@ -41,28 +41,31 @@
     <img class="img-fluid" src="./img/banner003.jpg" alt="">
     <div class="container">
       <article class="text-white text-bold m-5">
-        <h1 class="col-8 mb-5">Bienvenido a esta aventura espacial</h1>
+        <h1 class="col-8">Bienvenido a esta aventura espacial</h1>
         <a type="submit" class="px-4 py-3 text-white d-inline">Despeguemos</a>
       </article>
     </div>
   </section>
 
   <section class="about">
-    <div class="container d-flex justify-content-center  align-items-center">
-      <article class="col-lg-6 col-md-12 col-sm-12 text-justify">
-        <h1 class="text-bold">SpaceRose</h1>
-        <p class="parrafo">SpaceRose es una historia ambientada en los años 60, centrada en la llegada del hombre a la
-          luna en el Apollo 11, este relato será narrado por Katherine Johnson, mujer afrodescendiente que realizó
-          los cálculos que hicieron posible dicho suceso.
-        </p>
-        <a type="submit" class=" mt-2 px-5 py-2 btn_leer text-white text-bold" href="./lecturacomic.html">
-          Leer comic
-        </a>
-      </article>
-      <article class="col-lg-6 col-md-12 col-sm-12">
-        <video autoplay loop class="embed-responsive embed-responsive-16by9 shadow p-3 mb-5 bg-body rounded"
-          src="./Video/logo_spacerose.mp4" width="500" height="300"></video>
-      </article>
+    <div class="container ">
+      <div class="d-flex justify-content-center align-items-center text-justify">
+        <article class="col-lg-6 ">
+          <h1 class="text-bold text-danger">SpaceRose</h1>
+          <p class="parrafo">SpaceRose es una historia ambientada en los años 60, centrada en la llegada del hombre a la
+            luna en el Apollo 11, este relato será narrado por Katherine Johnson, mujer afrodescendiente que realizó
+            los cálculos que hicieron posible dicho suceso.
+          </p>
+          <a type="submit" class=" mt-2 px-5 py-2 btn_leer text-white text-bold" href="./lecturacomic.html">
+            Leer comic
+          </a>
+        </article>
+
+        <article class="col-6-6">
+          <video autoplay loop class="embed-responsive embed-responsive-16by9 shadow p-3 mb-5 bg-body rounded"
+            src="./Video/logo_spacerose.mp4" width="500" height="300"></video>
+        </article>
+      </div>
     </div>
   </section>
 
@@ -285,7 +288,9 @@
     <div class="container">
       <footer class="row p-5 justify-content-around align-items-center">
         <div class>
-          <span class="text-white text-center">&copy;2020<b> SpaceRose</b></span>
+          <span class="text-white text-center">&copy;
+            <script>document.write(new Date().getFullYear())</script>
+            <b> SpaceRose</b></span>
         </div>
       </footer>
     </div>
