--- a/lecturacomic.html
+++ b/lecturacomic.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link rel="shortcut icon" href="./Img/favicon.ico">
   <link rel="stylesheet" href="./styles/lectura.css" />
+  <link rel="stylesheet" href="./styles/videos.css" />
 </head>
 
 <body class="parrafo">
@@ -37,79 +38,215 @@
   </div>
 
   <section class="flipbook mt-5 d-flex">
+
     <button id="prevBtn">
       <i class="fas fa-arrow-circle-left"></i>
     </button>
 
-    <!--  -->
+
+
     <div id="book" class="book">
       <!-- Paper 1 -->
       <div id="p1" class="pagina">
         <div class="front">
-          <div id="f1" class="front-content">
-            <h1 class="book-title">Portadas</h1>
-            <img class="cover-img" src="./img/Recurso 1@3x.png" alt="dog">
+          <div class="front-content">
+            <img class="img-portada" src="./Img/img_boceto.jpg" alt="">
           </div>
         </div>
         <div class="back">
-          <div id="b1" class="back-content bg-dark d-flex align-items-end">
-            <div class="content text-white ">
-              <article class="team text-left">
-                <h5 class="text-bold text-white mb-3">Colaboradores</h5>
-                <div>
-                  <p class="parrafo">
-                    Estefania Marín
-                  </p>
-                  <p class="parrafo">
-                    Juan Camilo Gutierrez
-                  </p>
-                  <p class="parrafo">
-                    Sharon Osorno
-                  </p>
-                </div>
+          <div class="back-content bg-dark d-flex justify-content-end align-items-start">
+            <article class="team content text-white text-left mb-2 ml-2">
+              <h5 class="text-bold text-white mb-3">Colaboradores</h5>
+              <div>
+                <p class="parrafo">
+                  Estefania Marín
+                </p>
+                <p class="parrafo">
+                  Juan Camilo Gutierrez
+                </p>
+                <p class="parrafo">
+                  Sharon Osorno
+                </p>
+              </div>
+            </article>
 
-              </article>
-            </div>
           </div>
         </div>
       </div>
+
+
       <!-- Paper 2 -->
       <div id="p2" class="pagina">
         <div class="front">
-          <div id="f2" class="front-content">
+          <div class="front-content">
             <h1><img src="./img/logo Spacerose.png" class="logo" alt=""></h1>
           </div>
         </div>
         <div class="back">
-          <div id="b2" class="back-content">
+          <div class="back-content">
             <div class="container d-flex justify-content-center px-5 flex-column">
               <h1 class="text-bold text-danger text-center">SpaceRose</h1>
               <p class="parrafo text-center">SpaceRose es una historia ambientada en los años 60, centrada en la llegada
-                del hombre a la
-                luna en el Apollo 11, este relato será narrado por Katherine Johnson, mujer afrodescendiente que realizó
+                del hombre a la luna en el Apollo 11, este relato será narrado por Katherine Johnson, mujer
+                afrodescendiente que realizó
                 los cálculos que hicieron posible dicho suceso.</p>
             </div>
           </div>
         </div>
       </div>
+
       <!-- Paper 3 -->
       <div id="p3" class="pagina">
         <div class="front">
-          <div id="f3" class="front-content">
-            <h1></h1>
+          <div class="front-content">
+            <div class="cuadro_img mb-5"><img class="escene-img" src="./Img/miniaturas/video 001.png" alt="">
+            </div>
+            <div class="c-video">
+              <video class="video" controls poster="./Img/miniaturas/video 001.png" src="./video/escenas/video_escena_001.mp4"></video>
+            </div>
           </div>
         </div>
+
         <div class="back">
-          <div id="b3" class="back-content">
-            <h1>...</h1>
+          <div class="back-content">
+            <div class="c-video">
+              <video class="video" controls poster="./Img/miniaturas/video 002.png" src="./video/escenas/video_escena_002_A.mp4"></video>
+            </div>
+            <div class="cuadro_img mb-4"><img style="width: 50px; height: 50px;" src="./Img/img_boceto.jpg" alt="">
+            </div>
+            <div class="c-video">
+              <video class="video" controls  src="./video/escenas/video_escena_002_B.mp4"></video>
+            </div>
           </div>
         </div>
       </div>
+
+      <!-- Paper 4 -->
+      <div id="p4" class="pagina">
+        <div class="front">
+          <div class="front-content">
+            <div class="cuadro_img mb-5"><img class="escene-img" src="./Img/miniaturas/video 004.png" alt="">
+            </div>
+            <div class="c-video">
+              <video class="video" controls poster="./Img/miniaturas/video 003.png" src="./video/escenas/video_escena_002_B.mp4"></video>
+            </div>
+          </div>
+        </div>
+
+        <div class="back">
+          <div class="back-content">
+            <div class="c-video">
+              <video class="video" controls src="./video/escenas/video_escena_001.mp4"></video>
+            </div>
+            <h1>-salto de tiempo-
+            </h1>
+          </div>
+
+        </div>
+      </div>
+
+        <!-- Paper 5 -->
+        <div id="p5" class="pagina">
+          <div class="front">
+            <div class="front-content">
+              <div class="cuadro_img mb-5"><img class="escene-img" src="./Img/miniaturas/video 005.png" alt="">
+              </div>
+              <div class="c-video">
+                <video class="video" controls poster="./Img/miniaturas/video 003.png" src="./video/escenas/video_escena_002_B.mp4"></video>
+              </div>
+              <div><h2>-salto de tiempo-</h2></div>
+            </div>
+          </div>
+  
+          <div class="back">
+            <div class="back-content">
+              <div class="cuadro_img mb-5"><img class="escene-img" src="./Img/img_boceto.jpg" alt="">
+              </div>
+              <div class="c-video">
+                <video class="video" controls src="./video/escenas/video_escena_002_B.mp4"></video>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+
+
+         <!-- Paper 6 -->
+         <div id="p6" class="pagina">
+          <div class="front">
+            <div class="front-content">
+              <div class="cuadro_img mb-5"><img class="escene-img" src="./Img/img_boceto.jpg" alt="">
+              </div>
+              <div class="c-video">
+                <video class="video" controls src="./video/escenas/video_escena_002_B.mp4"></video>
+              </div>
+              <div><h2>-salto de tiempo-</h2></div>
+            </div>
+          </div>
+  
+          <div class="back">
+            <div class="back-content">
+              <div class="cuadro_img mb-5"><img class="escene-img" src="./Img/img_boceto.jpg" alt="">
+              </div>
+              <div class="c-video">
+                <video class="video" controls src="./video/escenas/video_escena_010.mp4"></video>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+
+         <!-- Paper 7 -->
+         <div id="p7" class="pagina">
+          <div class="front">
+            <div class="front-content">
+              <div class="cuadro_img mb-5"><img class="escene-img" src="./Img/img_boceto.jpg" alt="">
+              </div>
+              <div class="c-video">
+                <video class="video" controls src="./video/escenas/video_escena_002_B.mp4"></video>
+              </div>
+              <div><h2>-salto de tiempo-</h2></div>
+            </div>
+          </div>
+  
+          <div class="back">
+            <div class="back-content">
+              <div class="cuadro_img mb-5"><img class="escene-img" src="./Img/img_boceto.jpg" alt="">
+              </div>
+              <div class="c-video">
+                <video class="video" controls src="./video/escenas/video_escena_010.mp4"></video>
+              </div>
+            </div>
+  
+          </div>
+        </div>
+         <!-- Paper 8 -->
+         <div id="p8" class="pagina">
+          <div class="front">
+            <div class="front-content bg-dark">              
+            </div>
+          </div>
+  
+          <div class="back">
+            <div class="back-content bg-dark">
+            </div>
+  
+          </div>
+        </div>
+
+
+
+
+    
+
+
+
     </div>
 
     <button id="nextBtn">
       <i class="fas fa-arrow-circle-right"></i>
     </button>
+
   </section>
 
 
@@ -176,6 +313,7 @@
 
 
   <!-- script -->
+  <script src="./js/videos.js"></script>
   <script src="./js/comic.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
