responsive home listo

--- a/index.html
+++ b/index.html
@@ -38,33 +38,33 @@
   </div>
 
   <section class="banner">
-    <div >
-      <img class="img-fluid" src="./Img/" alt="">
-      <div class="container">
-        <article class="text-white text-bold m-5">
-          <h1 class="col-8">Bienvenido a esta aventura espacial</h1>
-          <a type="submit" class=" text-white d-inline" href="./lecturacomic.html">Despeguemos</a>
-        </article>
-      </div>
+    <div class="container d-flex justify-content-center m-5">
+      <article class="text-white  text-center text-bold ">
+        <h1>Bienvenido a esta aventura espacial</h1>
+        <a type="submit" class=" text-white d-inline" href="./lecturacomic.html">Despeguemos</a>
+      </article>
     </div>
-    
+
+
+
+
   </section>
 
   <section class="about">
     <div class="container">
-      <div class="d-flex content_about ">
-        <article class="col-lg-6 col-md-10 col-sm-12">
+      <div class="d-flex content_about justify-content-center">
+        <article class="col-lg-6 col-md-10 col-sm-6">
           <h1 class="text-bold text-danger">SpaceRose</h1>
-          <p class="parrafo col-md-12 col-sm-12">SpaceRose es una historia ambientada en los años 60, centrada en la llegada del
-            hombre a la luna en el Apollo 11, este relato será narrado por Katherine Johnson, mujer afrodescendiente que
-            realizó los cálculos que hicieron posible dicho suceso.
+          <p class="parrafo">SpaceRose es una historia ambientada en los años 60, centrada en la
+            llegada del hombre a la luna en el Apollo 11, este relato será narrado por Katherine Johnson, mujer
+            afrodescendiente que realizó los cálculos que hicieron posible dicho suceso.
           </p>
-          <a type="submit" class=" mt-2 px-5 py-2 btn_leer text-white text-bold" href="./lecturacomic.html">
+          <a type="submit" class="mt-2 px-5 py-2 btn_leer text-white text-bold" href="./lecturacomic.html">
             Leer comic
           </a>
         </article>
 
-        <article class="col-lg-6 col-md-10">
+        <article class="col-lg-6 col-md-10 col-sm-6">
           <video autoplay loop class="embed-responsive embed-responsive-16by9 shadow p-3 mb-5 bg-body rounded"
             src="./video/logo_spacerose.mp4" width="500" height="300"></video>
         </article>
