corrección alineación modal

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h1 class="text-bold text-white">Personajes</h1>
       <p class="parrafo text-white">Conoce a nuestros protagonistas</p>
 
-      <article class="col-10 my-5 text-center">
+      <article class="col-10 my-5">
 
         <button type="button" data-toggle="modal" data-target="#modalkaterine">
           <img src="./img/personajes/Katerine.png" alt="">
